# serializer version: 1
# name: test_import
  dict({
    'password': 'nc_pass',
    'url': 'nc_url',
    'username': 'nc_user',
    'verify_ssl': True,
  })
# ---
# name: test_reauth
  dict({
    'password': 'other_password',
    'url': 'nc_url',
    'username': 'other_user',
    'verify_ssl': True,
  })
# ---
# name: test_user_create_entry
  dict({
    'password': 'nc_pass',
    'url': 'nc_url',
    'username': 'nc_user',
    'verify_ssl': True,
  })
# ---
